--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/styles/favicon.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="src/styles/favicon.svg" /> -->
+    <link rel="icon" type="image/png" href="src/assets/brandon_head.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brandon (Yifan) Yang | Homepage</title>
   </head>
