Added tikZ support (kinda slow thought)

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="src/styles/favicon.svg" /> -->
+    <script src="https://tikzjax.com/v1/tikzjax.js"></script>
     <link rel="icon" type="image/png" href="src/assets/brandon_head.jpg" />
+    <link rel="stylesheet" type="text/css" href="https://tikzjax.com/v1/fonts.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brandon (Yifan) Yang | Homepage</title>
   </head>
