--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="src/assets/brandon_head.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/notes-svgrepo-com.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brandon (Yifan) Yang | Homepage</title>
+    <title>Notie</title>
   </head>
   <body>
     <div id="root"></div>
