--- a/demo-app/index.html
+++ b/demo-app/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/notes-svgrepo-com.svg" />
+    <link rel="icon" type="image/svg+xml" href="/notes.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Notie</title>
+    <title>notie</title>
   </head>
   <body>
     <div id="root"></div>
